--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ The <br> is a line brake. This makes sure each link is on a new line.
  -->
 
 
-<h3>selected writing</h3>
+<h3>non fiction</h3>
 <h4>2019</h4>
 
 <ul>
