--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ The <br> is a line brake. This makes sure each link is on a new line.
 <ul>
 <li><a href="https://medium.com/@jacqu/sustained-e89bcfa01273" target="_blank">Sustained [Medium]</a></li>
 <li><a href="https://medium.com/@jacqu/strather-d952586d637f" target="_blank">Strather [Medium]</a></li>
- <li><a href="post.html">Blog</a></li>
+ <li><a href="post.html" target="_blank">Blog</a></li>
 
 </ul>
 </div>
