--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ The below space is used for filling in your bio, if you dont want a bio delete e
 <h3>about</h3>
 </div>
 
-I'm Jacq and I write things.
+I'm Jacq and I write things. If you want me to write things for you send me an email.
 
 </div>
 
