--- a/post.html
+++ b/post.html
@@ -47,7 +47,7 @@ The <br> is a line brake. This makes sure each link is on a new line.
 
 
 <h3>blogpost</h3>
-<p> does this make a separate little blog post?</p>
+<p> Something is coming soon. </p>
 
 </div>
 
@@ -65,6 +65,7 @@ To link to a site add the URL in between the "" for the 'href=""'
  -->
 <a href="mailto:jacquettabridge@gmail.com"><i class="fas fa-envelope"></i></a>
 <a href="https://twitter.com/jacqbridge" target="_blank"><i class="fab fa-twitter"></i></a>
+<a href="https://www.linkedin.com/in/jacquettabridge" target="_blank"><i class="fab fa-linkedin"></i>
 
 <!--
 If you have more social media or contact links you can keep adding them.
