--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ I'm Jacq and I write things.
 <ul>
 <li><a href="https://medium.com/@jacqu/sustained-e89bcfa01273" target="_blank">Sustained [Medium]</a></li>
 <li><a href="https://medium.com/@jacqu/strather-d952586d637f" target="_blank">Strather [Medium]</a></li>
- <li><a href="post.html" target="_blank">Blog</a></li>
+ <li><a href="post.html">Blog</a></li>
 
 </ul>
 </div>
