--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-permalink: /404.html
+
 
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
@@ -11,3 +11,5 @@ permalink: /404.html
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 
 <title>Oh no</title>
+
+  <p> There's nothing here because you're not supposed to be here. Head back home and try again. </p>
