--- a/404.html
+++ b/404.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -10,6 +8,35 @@
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 
-<title>Oh no</title>
+<title>Oh no!</title>
+  </head>
 
-  <p> There's nothing here because you're not supposed to be here. Head back home and try again. </p>
+<body>
+<div class="list">
+
+
+<h1 class="name">You're in the wrong spot</h1>
+
+
+
+<h3> There's nothing here because you're not supposed to be here. Head back home and try again. </h3>
+<p>  </p>
+
+</div>
+
+<li><a href="jacqbridge.com">Click here to go home.</a></li>
+
+<div class="contact">
+<h3>contact</h3>
+
+
+<a href="mailto:jacquettabridge@gmail.com"><i class="fas fa-envelope"></i></a>
+<a href="https://twitter.com/jacqbridge" target="_blank"><i class="fab fa-twitter"></i></a>
+<a href="https://www.linkedin.com/in/jacquettabridge" target="_blank"><i class="fab fa-linkedin"></i>
+
+
+</div>
+
+
+</body>
+</html>
