--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
 
 </div>
 
-<li><a href="jacqbridge.com">Click here to go home.</a></li>
+<p><a href="jacqbridge.com">Click here to go home.</a></p>
 
 <div class="contact">
 <h3>contact</h3>
