--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@ I'm Jacq and I write things.
 <h3>non fiction</h3>
 
 <ul>
-<li><a href="https://monzo.com/blog/women-in-finance-charter-update" target="_blank">Women in Finance Charter [Monzo]</a></li>
-  <li><a href="post.html">Blog</a></li>
+  <li><a href="post.html">My Blog</a></li>
+  <li><a href="https://monzo.com/blog/women-in-finance-charter-update" target="_blank">Women in Finance Charter [Monzo]</a></li>
 </ul>
 
 <h3>fiction</h3>
 <ul>
-<li><a href="https://medium.com/@jacqu/sustained-e89bcfa01273" target="_blank">Sustained [Medium]</a></li>
-<li><a href="https://medium.com/@jacqu/strather-d952586d637f" target="_blank">Strather [Medium]</a></li>
+  <li><a href="https://medium.com/@jacqu/sustained-e89bcfa01273" target="_blank">Sustained [Medium]</a></li>
+  <li><a href="https://medium.com/@jacqu/strather-d952586d637f" target="_blank">Strather [Medium]</a></li>
 
 </ul>
 </div>
