--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ I'm Jacq and I write things.
 <h3>non fiction</h3>
 
 <ul>
-  <li><a href="post.html">My Blog</a></li>
+  <li><a href="post.html">My Blog [Here]</a></li>
   <li><a href="https://monzo.com/blog/women-in-finance-charter-update" target="_blank">Women in Finance Charter [Monzo]</a></li>
 </ul>
 
