--- a/fiction.html
+++ b/fiction.html
@@ -17,6 +17,20 @@
   </head>
   <body>
 
+    <div class="container">
+      <header class="main">
+        <nav>
+          <ul>
+            <li><a href=" "> Home </a></li>
+            <li><a href="blog.html"> Blog </a></li>
+            <li><a href="fiction.html"> Fiction </a></li>
+            <li><a href="non-fiction.html"> Non-fiction</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div> <!-- end container -->
+    <!-- this is the navigation bar -->
+
   <div id="links">
     <div class="container">
       <h1>fiction</h1>
