--- a/fiction.html
+++ b/fiction.html
@@ -16,6 +16,14 @@
     <!-- this is to connect this with the CSS -->
   </head>
   <body>
+    
+    <div id="name">
+  <div class="container">
+    <h1 id="name-title">Fiction</h1>
+    <!-- this is the title -->
+  </div><!-- end container -->
+</div> <!-- end name -->
+
 
     <div class="container">
       <header class="main">
@@ -33,7 +41,6 @@
 
   <div id="links">
     <div class="container">
-      <h1>fiction</h1>
       <ul>
         <li><a href="https://medium.com/@jacqu/sustained-e89bcfa01273" target="_blank" id= "work-links">Sustained [Medium]</a></li>
         <li><a href="https://medium.com/@jacqu/strather-d952586d637f" target="_blank" id= "work-links">Strather [Medium]</a></li>
