--- a/fiction.html
+++ b/fiction.html
@@ -16,11 +16,11 @@
     <!-- this is to connect this with the CSS -->
   </head>
   <body>
-    
-    <div id="name">
+
+<div id="name">
   <div class="container">
-    <h1 id="name-title">Fiction</h1>
-    <!-- this is the title -->
+    <h1>Fiction</h1>
+    <!-- this is the title on the page -->
   </div><!-- end container -->
 </div> <!-- end name -->
 
@@ -29,7 +29,7 @@
       <header class="main">
         <nav>
           <ul>
-            <li><a href=" "> Home </a></li>
+            <li><a href="index.html"> Home </a></li>
             <li><a href="blog.html"> Blog </a></li>
             <li><a href="fiction.html"> Fiction </a></li>
             <li><a href="non-fiction.html"> Non-fiction</a></li>
