maybe need to be more patient

--- a/fiction.html
+++ b/fiction.html
@@ -21,6 +21,7 @@
   <div class="container">
     <h1>Fiction</h1>
     <!-- this is the title on the page -->
+    <h2 id="sub-name"> Short things I've written </h2>
   </div><!-- end container -->
 </div> <!-- end name -->
 
