hopefully the last one
trying to get my links looking pretty but struggling

--- a/fiction.html
+++ b/fiction.html
@@ -40,13 +40,13 @@
     </div> <!-- end container -->
     <!-- this is the navigation bar -->
 
+<div class="container">
   <div id="links">
-    <div class="container">
       <ul>
-        <li><a href="https://medium.com/@jacqu/sustained-e89bcfa01273" target="_blank" id="work-links">Sustained [Medium]</a></li>
-        <li><a href="https://medium.com/@jacqu/strather-d952586d637f" target="_blank" id="work-links">Strather [Medium]</a></li>
-    </div> <!-- end container -->
-  </div> <!-- end links -->
+        <li><a href="https://medium.com/@jacqu/sustained-e89bcfa01273" target="_blank">Sustained [Medium]</a></li>
+        <li><a href="https://medium.com/@jacqu/strather-d952586d637f" target="_blank">Strather [Medium]</a></li>
+    </div> <!-- end links -->
+  </div> <!-- end container -->
 
 
 
