--- a/non-fiction.html
+++ b/non-fiction.html
@@ -17,13 +17,35 @@
   </head>
   <body>
 
-  <div id="links">
+<div id="name">
+  <div class="container">
+    <h1>Non-Fiction</h1>
+    <!-- this is the title on the page -->
+    <h2 id="sub-name"> Things I've written for other people </h2>
+  </div><!-- end container -->
+</div> <!-- end name -->
+
+
     <div class="container">
-      <h1>non-fiction</h1>
-      <ul>
-        <li><a href="https://monzo.com/blog/women-in-finance-charter-update" target="_blank" id= "work-links">Women in Finance Charter [Monzo]</a></li>
+      <header class="main">
+        <nav>
+          <ul>
+            <li><a href="index.html"> Home </a></li>
+            <li><a href="blog.html"> Blog </a></li>
+            <li><a href="fiction.html"> Fiction </a></li>
+            <li><a href="non-fiction.html"> Non-fiction</a></li>
+          </ul>
+        </nav>
+      </header>
     </div> <!-- end container -->
-  </div> <!-- end links -->
+    <!-- this is the navigation bar -->
+
+  <div class="container">
+    <div id="links">
+      <ul>
+        <li><a href="https://monzo.com/blog/women-in-finance-charter-update" target="_blank">Women in Finance Charter [Monzo]</a></li>
+    </div> <!-- end links -->
+  </div> <!-- end container -->
 
 
 
