--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- this is linking to the fonts I want to use -->
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <!-- I think this is linking the twitter and other icons -->
+    <!-- this is linking the twitter and other icons -->
 
     <link rel="stylesheet" href="normalise.css">
     <link rel="stylesheet" href="styles.css">
