--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,20 @@
       </div><!-- end container -->
     </div> <!-- end name -->
 
+    <div class="container">
+      <header class="main">
+        <nav>
+          <ul>
+            <li><a href=" "> Home </a></li>
+            <li><a href="blog.html"> Blog </a></li>
+            <li><a href="fiction.html"> Fiction </a></li>
+            <li><a href="non-fiction.html"> Non-fiction</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div> <!-- end container -->
+    <!-- this is the navigation bar -->
+
   <div class="container">
     <div id="blog-post">
       <article class="blog">
@@ -35,9 +49,22 @@
           in my prettiest white broderie anglaise dress. Occasionally I’ll look pensively out of my window pretending
           like I’m trying to make sense of the world while actually resisting the urge to unlock my phone and scroll Twitter.</p>
       </article>
-
     </div> <!-- end blog-post -->
   </div> <!-- end container -->
+  <!-- this is where my blog posts go -->
+
+  <div class="container">
+    <div id="contact">
+      <h3>contact</h3>
+    </div> <!-- end contact -->
+        <div id="button-block">
+          <a href="mailto:jacquettabridge@gmail.com"><i class="fas fa-envelope"></i></a>
+          <a href="https://twitter.com/jacqbridge" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/jacquettabridge" target="_blank"><i class="fab fa-linkedin"></i>
+        </div> <!-- end button-block -->
+  </div> <!-- end container -->
+
+    <!-- this is the contact area with the little buttons -->
 
   </body>
 </html>
