--- a/blog.html
+++ b/blog.html
@@ -48,6 +48,15 @@
         <p>This is my first blog post. I am doing my best Carrie from Sex and the City impression, sitting at my laptop
           in my prettiest white broderie anglaise dress. Occasionally I’ll look pensively out of my window pretending
           like I’m trying to make sense of the world while actually resisting the urge to unlock my phone and scroll Twitter.</p>
+        <p>The reason I’m writing a blog is because I want to be a writer - an actual writer that people pay money to write words.
+          It’s dawned on me today that no one is willing to pay me to write words if I have no words to show them so here we are.
+          The decision to become a writer was a difficult one. For the past three years I’ve been working for Monzo. You know Monzo,
+          it’s the hot coral card you’ve got in your wallet because it’s pretty and because you had your Barclays account since you
+          were eleven and felt like actually knowing how much money you have. I started at Monzo in customer service after finishing
+          a degree in comparative literature. Three years and five different job titles later I’ve been made redundant from my role 
+          in the People Team (known as HR outside of startups). I decided to volunteer for redundancy because helping people with
+          HR questions really isn’t that fulfilling. I’m sure it is for some people, but finding, downloading, and sending someone
+          their last 12 months of payslips on an antiquated payroll system is not my idea of fun. Especially not every day, forever.</p>
       </article>
     </div> <!-- end blog-post -->
   </div> <!-- end container -->
