--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
       <header class="main">
         <nav>
           <ul>
-            <li><a href=" "> Home </a></li>
+            <li><a href="index.html"> Home </a></li>
             <li><a href="blog.html"> Blog </a></li>
             <li><a href="fiction.html"> Fiction </a></li>
             <li><a href="non-fiction.html"> Non-fiction</a></li>
@@ -53,7 +53,7 @@
           The decision to become a writer was a difficult one. For the past three years I’ve been working for Monzo. You know Monzo,
           it’s the hot coral card you’ve got in your wallet because it’s pretty and because you had your Barclays account since you
           were eleven and felt like actually knowing how much money you have. I started at Monzo in customer service after finishing
-          a degree in comparative literature. Three years and five different job titles later I’ve been made redundant from my role 
+          a degree in comparative literature. Three years and five different job titles later I’ve been made redundant from my role
           in the People Team (known as HR outside of startups). I decided to volunteer for redundancy because helping people with
           HR questions really isn’t that fulfilling. I’m sure it is for some people, but finding, downloading, and sending someone
           their last 12 months of payslips on an antiquated payroll system is not my idea of fun. Especially not every day, forever.</p>
