--- a/index.html
+++ b/index.html
@@ -42,12 +42,16 @@
 
 <div class="container">
   <div id="bio">
-  <p> This is some placeholder text while I get my thoughts together: Lorem ipsum dolor sit amet,
-    consectetur adipisicing elit, sed do eiusmod tempor incididunt
-    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p> I’m Jacq and I write things. I also made this website myself!</p>
+
+  <p>For a long time I’ve been writing things just for me, because I enjoy
+    it. Then I realised I’m not so bad at writing so I thought I’d offer my
+    writing to others. I’m looking to build my writing into something bigger and better. </p>
+
+  <p> I graduated from Queen Mary, University of London with a BA in Comparative
+    Literature. From there I worked at Monzo for three years, writing bits and
+    bobs where I could. Now I’m looking for freelance opportunities so please
+    contact me by clicking through any of the links below.</p>
   </div> <!-- end bio -->
 </div> <!-- end container -->
 <!-- this is the bio area -->
