--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <div class="container">
   <div id="bio">
-  <p> I’m Jacq and I write things. I also made this website myself!</p>
+  <p> I’m Jacq and I write things, I also made this website myself!</p>
 
   <p>For a long time I’ve been writing things just for me, because I enjoy
     it. Then I realised I’m not so bad at writing so I thought I’d offer my
