--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <p> I graduated from Queen Mary, University of London with a BA in Comparative
     Literature. From there I worked at Monzo for three years, writing bits and
     bobs where I could. Now I’m looking for freelance opportunities, so if you're interested in
-    hiring me contact me by clicking through any of the links below.</p>
+    hiring me click through any of the links below to get in touch.</p>
   </div> <!-- end bio -->
 </div> <!-- end container -->
 <!-- this is the bio area -->
