--- a/blog.html
+++ b/blog.html
@@ -46,8 +46,7 @@
             <!-- blog post number one here: -->
             <h4>22/07/2020</h4>
           </header>
-          <p>Like any twenty to thirty year old I have a surplus of plants in my house. It’s borderline obsessive.
-            Looking around my room right now I count ten plants. Zig zag cactus, string of hearts, fittonia, snake plant,
+          <p>Looking around my room right now I count ten plants. Zig zag cactus, string of hearts, fittonia, snake plant,
             unnamed succulent, burro’s tail, parlour palm, unnamed cactus, Chinese money plant, and a kentia palm.
             If I were to go out into my living room I could count five more. A huge monstera deliciosa, fiddle leaf
             fig, another parlour palm, a jade plant and hedge cactus. Plants just make rooms better. They keep you
