--- a/blog.html
+++ b/blog.html
@@ -65,9 +65,9 @@
             hadn’t improved and if anything was getting worse. That’s when I decided to look closer to see if I could
             figure out the cause of my baby’s decline. I put my head really close to the plant and on the leaves and
             stems I could see these tiny white bugs. I pulled back and they were everywhere, crawling up and down its
-            beautiful pinstripes. Anyone who knows me well knows that I really don’t like small bugs in large quantities.
-            There’s something about how tiny they are combined with how numerous that makes me itch — I’m squirming even
-            thinking about it. So seeing these bugs on a plant in my bedroom nearly sent me over the edge. </p>
+            beautiful pinstripes.I really don’t like small bugs in large quantities.
+            There’s something about how tiny tiny they are combined with how numerous that makes me itch — I’m squirming even
+            thinking about it. Seeing these bugs on a plant in my bedroom nearly sent me over the edge. </p>
           <p>I googled ‘tiny white bugs on plants lots gross’ to find out what I was dealing with. It turned out that
             they were mealy bugs and advice was to clean leaves and stems with soapy water. I added some fairy liquid
             to my spritz bottle and wiped the plant clean. Then I went inside and scrubbed myself clean in the shower.
@@ -77,7 +77,7 @@
             another room. I came back a week later and so did the mealybugs. There was no saving my poor baby, or at
             least no way of saving it that I was willing to try. The bugs had tested my resolve and won. </p>
           <p>I put my calathea outside in our courtyard to see if there was any potential for the bugs to somehow disappear
-            on their own. There it sits still, completely collapsed and brown. Constantly reminding me of my failure. </p>
+            on their own. There it sits still, completely collapsed and brown. A constant reminder of my failure. </p>
         </article>
       </div> <!-- end blog-post -->
     </div> <!-- end container -->
