--- a/404.html
+++ b/404.html
@@ -21,6 +21,20 @@
 
 
 <h1 class="name">You're in the wrong spot</h1>
+<h2> click a link below to get to the right one</h2>
+<div class="container">
+  <header class="main">
+    <nav>
+      <ul>
+        <li><a href="index.html"> Home </a></li>
+        <li><a href="blog.html"> Blog </a></li>
+        <li><a href="fiction.html"> Fiction </a></li>
+        <li><a href="non-fiction.html"> Non-fiction</a></li>
+      </ul>
+    </nav>
+  </header>
+</div> <!-- end container -->
+<!-- this is the navigation bar -->
 
 <div class="container">
   <div id="contact">
