--- a/blog.html
+++ b/blog.html
@@ -87,7 +87,7 @@
           <div id="links">
             <h4> Older posts </h4>
               <ul>
-                <li><a href="blog1.html"></a> 20/07/2020 </li>
+                <li><a href="blog1.html">20/07/2020 </a></li>
               </ul>
             </div> <!-- end links -->
           </div> <!-- end container -->
