--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="normalise.css">
     <link rel="stylesheet" href="styles.css">
     <!-- this is to connect this with the CSS -->
+
+    <meta name"viewport" content="width =device-width, initial scale=1">
+    <!-- this might make it fit to a mobile device? -->
+
   </head>
   <body>
 
