adding dates to blogs

--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,8 @@
         <article class="blog">
           <header>
             <!-- blog post number one here: -->
-            <h4>22/07/2020</h4>
+            <h4>Calathea</h4>
+            <h5>22/07/2020</h5>
           </header>
           <p>Looking around my room right now I count ten plants. Zig zag cactus, string of hearts, fittonia, snake plant,
             unnamed succulent, burro’s tail, parlour palm, unnamed cactus, Chinese money plant, and a kentia palm.
