--- a/blog1.html
+++ b/blog1.html
@@ -44,7 +44,8 @@
       <article class="blog">
         <header>
           <!-- blog post number one here: -->
-          <h4>20/07/2020</h4>
+          <h4>Cinnamon buns</h4>
+          <h3>20/07/2020</h3>
         </header>
 
         <p> My most recent baking disaster was sourdough cinnamon buns. Like everybody else in lockdown I was enticed by the promise
