updating with new blog post

--- a/blog.html
+++ b/blog.html
@@ -44,41 +44,71 @@
         <article class="blog">
           <header>
             <!-- blog post number one here: -->
-            <h4>Calathea</h4>
-            <h5>22/07/2020</h5>
+            <h4>The McFlurry: A History</h4>
+            <h5>31/07/2020</h5>
           </header>
-          <p>Looking around my room right now I count ten plants. Zig zag cactus, string of hearts, fittonia, snake plant,
-            unnamed succulent, burro’s tail, parlour palm, unnamed cactus, Chinese money plant, and a kentia palm.
-            If I were to go out into my living room I could count five more. A huge monstera deliciosa, fiddle leaf
-            fig, another parlour palm, a jade plant and hedge cactus. Plants just make rooms better. They keep you
-            in oxygen, and if they’re all alive they make you look like a semi-responsible adult. This is the problem
-            with plants though, you have to look after them. </p>
-          <p>In general I’d say I’m a pretty good plant parent. I water them about once a week, some more, some less.
-            I check their soil to make sure it’s not soaked through or too dry. I’ll spritz the tropical looking ones
-            every now and then with my cute purple spritzer. I’m responsible but not overbearing. This has worked well
-            for me for the last three years, I’ve only lost one plant and that’s because I went out of town and my
-            housemates forgot to water it. Not really my fault but a loss nonetheless. In April this year however,
-            my plant luck ran out. It began when I noticed my calathea ornata was looking a little droopy. Calathea
-            ornata is otherwise known as a pinstripe plant because it has these amazing stripes on the leaves. My
-            calathea had dark green leaves with bright pink stripes, it was really pretty. Until it went and died. </p>
-          <p>The lovely bright leaves began curling and browning at the ends. I felt the soil and decided more water
-            would help. I kept a lazy eye on it, poking the soil and spritzing every now and then. After a week it
-            hadn’t improved and if anything was getting worse. That’s when I decided to look closer to see if I could
-            figure out the cause of my baby’s decline. I put my head really close to the plant and on the leaves and
-            stems I could see these tiny white bugs. I pulled back and they were everywhere, crawling up and down its
-            beautiful pinstripes.I really don’t like small bugs in large quantities.
-            There’s something about how tiny tiny they are combined with how numerous that makes me itch — I’m squirming even
-            thinking about it. Seeing these bugs on a plant in my bedroom nearly sent me over the edge. </p>
-          <p>I googled ‘tiny white bugs on plants lots gross’ to find out what I was dealing with. It turned out that
-            they were mealy bugs and advice was to clean leaves and stems with soapy water. I added some fairy liquid
-            to my spritz bottle and wiped the plant clean. Then I went inside and scrubbed myself clean in the shower.
-            I repeated this for a few days and moved my plant into quarantine all by itself. After a week the bugs were
-            gone but I’d lost a couple of leaves in the process. No trouble as there were plenty of leaves to go around.
-            I wanted to make sure I didn’t spread the mealybugs to other plants so I left my pretty little calathea in
-            another room. I came back a week later and so did the mealybugs. There was no saving my poor baby, or at
-            least no way of saving it that I was willing to try. The bugs had tested my resolve and won. </p>
-          <p>I put my calathea outside in our courtyard to see if there was any potential for the bugs to somehow disappear
-            on their own. There it sits still, completely collapsed and brown. A constant reminder of my failure. </p>
+          <p> The McFlurry was first introduced in 1997. It was invented in 1995 by Ron McLellan,
+            a McDonalds franchisee. A McFlurry consists of whipped soft serve vanilla ice cream and
+            a sweet topping. The original flavours for a McFlurry were Oreo, Heath, Nestle Crunch,
+            M&M’s and Butterfinger. I don’t know what a Heath is, or a Nestle Crunch. The original
+            flavours of McFlurry served at McDonalds in West Quay Shopping Centre in Southampton were
+            Smarties, Crunchie and Dairy Milk.  </p>
+
+          <p>McFlurries are served and eaten with a hollow, square, plastic spoon. The spoon is clipped
+              into a machine purpose built to stir the topping into the ice cream. The process of stirring
+              the topping into the ice cream is called flurrying. It is an uncomfortable spoon to hold and
+              eat from. In West Quay McDonalds they don’t use a machine to flurry the McFlurry. I’ve stood
+              in front of the counter and watched, no machine and no flurrying of any kind. Just uncomfortable
+              square spoons to mix with yourself. In Australia and New Zealand they took away the flying
+              machines altogether, instead their McFlurries are ‘hand stirred – with love – by our crew.’
+              They got rid of the square spoons in favour of regular looking spoons. </p>
+
+            <p>In the US you can buy a McFlurry in regular or snack size. Regular size is 340g and has
+                around 640 calories depending on your topping. A snack size is 226g and around 420 calories.
+                At West Quay McDonalds between 2007 and 2013 you could buy just one size of McFlurry, it was
+                170g and around 220 calories. Now in the UK a regular McFlurry is 150g. I used to eat a McFlurry
+                at the same time as my fries. I would dip a fry into the McFlurry and savour the sweet, salt,
+                hot, cold mix. By the end of my meal, the McFlurry would be warmed into a salty syrupy soup that
+                I would pour into the bin. </p>
+
+            <p>Between 1997 and 2006 if you wanted to trap a hedgehog you could use a McFlurry. You’d need to leave
+              a near empty cup of Mcflurry, lid on, where the hedgehog had been sighted. Then the next morning you’d
+              find a hedgehog with its head lodged firmly in the hole in the lid. Hundreds of hedgehogs were walking
+              around, blinded by the pots of McFlurry stuck to their heads. If you type ‘hedgehog mcflurry’ into Google
+              Images you can see them. Faces covered in ice cream, looking at you forlornly from their plastic traps.
+              In 2006 McDonalds announced they’d be changing their design after a campaign by the British Hedgehog
+              Preservation Society. No more trapped hedgehogs.</p>
+
+            <p>The world record for fastest time to eat a McFlurry is 20.35 seconds. It was set by Josh Katz in November
+              2014. You can watch a video of him setting the record here. The video has one comment, written two years
+              after it was published, ‘Let’s see the inside of the cup.’ Josh eats the McFlurry in 8 scoops. He shows
+              no sign of brain freeze. It’s a feat. I think I could eat a McFlurry in 60 seconds if I tried really hard.
+              They discontinued the Crunchie McFlurry so I have no interest in eating McFlurries anymore, not even for a
+              world record. Josh Katz doesn’t have any other world records on the recordsetter website. He ate a McFlurry
+              in 2014 and has achieved nothing record worthy since.</p>
+
+            <p>In some countries McFlurries have sauces - chocolate, strawberry, mint. At the McDonalds in West Quay between
+               2007 and 2013 the McFlurries were served without sauce. The first McFlurry I had with sauce on was in Barcelona
+               in 2008. I ordered an Oreo McFlurry and it came with chocolate sauce. The McFlurry was flurried and the sauce
+               and ice cream were fully combined. It was too sweet and sticky, the sauce coated my tongue and teeth. I didn’t
+               dip my fries because I didn’t want to ruin them with chocolate sauce. When I came back to West Quay McDonalds
+               I savoured my non-sauced McFlurry. A McFlurry is not a sundae, it doesn't need sauce. </p>
+
+            <p>If you go to mcdonalds.fandom.com you can read about the OgreLoad McFlurry. The OgreLoad McFlurry was a promotional
+              McFlurry in 2007 for the release of the film ‘Shrek the Third’, it also made an appearance in 2011 for ‘Shrek Forever After’.
+              It was a chocolate mint Aero McFlurry. The fandom page claims that ‘While Mike Meyers hates mint chocolate ice cream,
+              he finally relented and endorsed the product after they offered to create a version without mint just for him.’
+              If you type ‘does mike myers hate mint chocolate ice cream’ into Google there are no relevant results, and it
+              suggests you might be looking for ‘does michael myers hate mint chocolate ice cream’. Upon clicking through
+              Google’s suggested result there is no evidence that Michael Myers hated mint chocolate ice cream either.</p>
+
+            <p>McFlurries are sold in 99 countries across the world. If I had to guess I would say I’ve eaten McFlurries in
+              4 or 5 of these countries. The majority of McFlurries I have consumed have been at the food court in West Quay
+              Southampton. I would buy a McFlurry after school and sit with friends to eat it. I would buy a meal at McDonalds
+              after shopping on the weekend and eat my McFlurry alongside. After I found out both my GCSE and A Level results
+              I went to the food court and bought a McFlurry. A date for my boyfriend and me would be to sit with a McFlurry
+              and fries and chat. One time we were sitting and dipping and eating and I saw an elderly man sitting alone at
+              the table behind us. I felt for some reason that this was an impossibly lonely sight. </p>
         </article>
       </div> <!-- end blog-post -->
     </div> <!-- end container -->
@@ -88,7 +118,8 @@
           <div id="links">
             <h4> Older posts </h4>
               <ul>
-                <li><a href="blog1.html">20/07/2020 </a></li>
+                <li><a href="blog1.html"> Cinnamon Buns </a></li>
+                <li><a href="blog2.html"> Calathea </a></li>
               </ul>
             </div> <!-- end links -->
           </div> <!-- end container -->
