--- a/blog.html
+++ b/blog.html
@@ -108,7 +108,7 @@
               after shopping on the weekend and eat my McFlurry alongside. After I found out both my GCSE and A Level results
               I went to the food court and bought a McFlurry. A date for my boyfriend and me would be to sit with a McFlurry
               and fries and chat. One time we were sitting and dipping and eating and I saw an elderly man sitting alone at
-              the table behind us. I felt for some reason that this was an impossibly lonely sight. </p>
+              the table behind us. I felt, for some reason, that this was an impossibly lonely sight. </p>
         </article>
       </div> <!-- end blog-post -->
     </div> <!-- end container -->
