--- a/non-fiction.html
+++ b/non-fiction.html
@@ -44,6 +44,7 @@
     <div id="links">
       <ul>
         <li><a href="https://monzo.com/blog/women-in-finance-charter-update" target="_blank">Women in Finance Charter [Monzo]</a></li>
+        <li> <a href="https://www.theselflovejournal.co.uk/blog/breaking-routine" target="_blank">Breaking Routine [The Self Love Journal]</a></li>
       </ul>
     </div> <!-- end links -->
   </div> <!-- end container -->
