--- a/blog2.html
+++ b/blog2.html
@@ -43,19 +43,10 @@
     <div id="blog-post">
       <article class="blog">
         <header>
-          <!-- blog post number one here: -->
+          <!-- blog post number two here: -->
           <h4>Calathea</h4>
           <h5>22/07/2020</h5>
         </header>
-
-        <div class="container">
-          <div id="blog-post">
-            <article class="blog">
-              <header>
-                <!-- blog post number one here: -->
-                <h4>Calathea</h4>
-                <h5>22/07/2020</h5>
-              </header>
               <p>Looking around my room right now I count ten plants. Zig zag cactus, string of hearts, fittonia, snake plant,
                 unnamed succulent, burro’s tail, parlour palm, unnamed cactus, Chinese money plant, and a kentia palm.
                 If I were to go out into my living room I could count five more. A huge monstera deliciosa, fiddle leaf
