--- a/blog.html
+++ b/blog.html
@@ -44,71 +44,33 @@
         <article class="blog">
           <header>
             <!-- blog post number one here: -->
-            <h4>The McFlurry: A History</h4>
-            <h5>31/07/2020</h5>
+            <h4>Drowned Towns</h4>
+            <h5>20/08/2020</h5>
           </header>
-          <p> The McFlurry was first introduced in 1997. It was invented in 1995 by Ron McLellan,
-            a McDonalds franchisee. A McFlurry consists of whipped soft serve vanilla ice cream and
-            a sweet topping. The original flavours for a McFlurry were Oreo, Heath, Nestle Crunch,
-            M&M’s and Butterfinger. I don’t know what a Heath is, or a Nestle Crunch. The original
-            flavours of McFlurry served at McDonalds in West Quay Shopping Centre in Southampton were
-            Smarties, Crunchie and Dairy Milk.  </p>
+          <p>There are a number of drowned towns in the UK. ‘Drowned’ is the term given to towns that have been
+            flooded to form a reservoir. Historically, there’s often controversy surrounding the drowning of a
+            village. There’s a need for water in an area, and a well-placed valley to fill. But there’s a population
+            of people who have built their lives there. They’re in the way. A lot of the town drownings in the UK
+            happened so long ago that there aren’t many people still bitter. </p>
 
-          <p>McFlurries are served and eaten with a hollow, square, plastic spoon. The spoon is clipped
-              into a machine purpose built to stir the topping into the ice cream. The process of stirring
-              the topping into the ice cream is called flurrying. It is an uncomfortable spoon to hold and
-              eat from. In West Quay McDonalds they don’t use a machine to flurry the McFlurry. I’ve stood
-              in front of the counter and watched, no machine and no flurrying of any kind. Just uncomfortable
-              square spoons to mix with yourself. In Australia and New Zealand they took away the flying
-              machines altogether, instead their McFlurries are ‘hand stirred – with love – by our crew.’
-              They got rid of the square spoons in favour of regular looking spoons. </p>
+          <p>I’ve been interested in drowned towns since I used to sail on Rutland Water when I was a child. It’s
+            a reservoir northwest of Peterborough, among the largest manmade lakes in Europe. To make Rutland Water
+            the towns of Nether Hambleton and Middle Hambleton were first demolished, then flooded. I didn’t know
+            they had been demolished when I sailed on top of them. I thought that deep under the water they were
+            intact, dormant. I didn’t really even understand that the flooding of the town wasn’t some freak accident.
+            I pictured water crashing through the village from an unknown source, people fleeing.  </p>
 
-            <p>In the US you can buy a McFlurry in regular or snack size. Regular size is 340g and has
-                around 640 calories depending on your topping. A snack size is 226g and around 420 calories.
-                At West Quay McDonalds between 2007 and 2013 you could buy just one size of McFlurry, it was
-                170g and around 220 calories. Now in the UK a regular McFlurry is 150g. I used to eat a McFlurry
-                at the same time as my fries. I would dip a fry into the McFlurry and savour the sweet, salt,
-                hot, cold mix. By the end of my meal, the McFlurry would be warmed into a salty syrupy soup that
-                I would pour into the bin. </p>
+            <p>There was a rumour that the anchors of rescue boats would sometimes catch on a church spire under the
+              water. In my head, I saw a dilapidated building with its tower thrust towards the surface. Church benches
+              suspended inside. Segments taken out of it by anchors over the years. The reality is that there was only
+              one church in Nether Hambleton and it still exists above the water.  </p>
 
-            <p>Between 1997 and 2006 if you wanted to trap a hedgehog you could use a McFlurry. You’d need to leave
-              a near empty cup of Mcflurry, lid on, where the hedgehog had been sighted. Then the next morning you’d
-              find a hedgehog with its head lodged firmly in the hole in the lid. Hundreds of hedgehogs were walking
-              around, blinded by the pots of McFlurry stuck to their heads. If you type ‘hedgehog mcflurry’ into Google
-              Images you can see them. Faces covered in ice cream, looking at you forlornly from their plastic traps.
-              In 2006 McDonalds announced they’d be changing their design after a campaign by the British Hedgehog
-              Preservation Society. No more trapped hedgehogs.</p>
+            <p>I would spend hours sailing, daydreaming about the town below. Rooms with furniture floating inside.
+              Fish swimming through the streets, in and out of windows. Street signs directing waterlogged cars.
+              It scared me to fall into the water. I thought that should our boat capsize, the rigging may snag on
+              a chimney. I imagined a drowned resident pulling me down, antagonised by our enjoyment of the water
+              above them.</p>
 
-            <p>The world record for fastest time to eat a McFlurry is 20.35 seconds. It was set by Josh Katz in November
-              2014. You can watch a video of him setting the record here. The video has one comment, written two years
-              after it was published, ‘Let’s see the inside of the cup.’ Josh eats the McFlurry in 8 scoops. He shows
-              no sign of brain freeze. It’s a feat. I think I could eat a McFlurry in 60 seconds if I tried really hard.
-              They discontinued the Crunchie McFlurry so I have no interest in eating McFlurries anymore, not even for a
-              world record. Josh Katz doesn’t have any other world records on the recordsetter website. He ate a McFlurry
-              in 2014 and has achieved nothing record worthy since.</p>
-
-            <p>In some countries McFlurries have sauces - chocolate, strawberry, mint. At the McDonalds in West Quay between
-               2007 and 2013 the McFlurries were served without sauce. The first McFlurry I had with sauce on was in Barcelona
-               in 2008. I ordered an Oreo McFlurry and it came with chocolate sauce. The McFlurry was flurried and the sauce
-               and ice cream were fully combined. It was too sweet and sticky, the sauce coated my tongue and teeth. I didn’t
-               dip my fries because I didn’t want to ruin them with chocolate sauce. When I came back to West Quay McDonalds
-               I savoured my non-sauced McFlurry. A McFlurry is not a sundae, it doesn't need sauce. </p>
-
-            <p>If you go to mcdonalds.fandom.com you can read about the OgreLoad McFlurry. The OgreLoad McFlurry was a promotional
-              McFlurry in 2007 for the release of the film ‘Shrek the Third’, it also made an appearance in 2011 for ‘Shrek Forever After’.
-              It was a chocolate mint Aero McFlurry. The fandom page claims that ‘While Mike Meyers hates mint chocolate ice cream,
-              he finally relented and endorsed the product after they offered to create a version without mint just for him.’
-              If you type ‘does mike myers hate mint chocolate ice cream’ into Google there are no relevant results, and it
-              suggests you might be looking for ‘does michael myers hate mint chocolate ice cream’. Upon clicking through
-              Google’s suggested result there is no evidence that Michael Myers hated mint chocolate ice cream either.</p>
-
-            <p>McFlurries are sold in 99 countries across the world. If I had to guess I would say I’ve eaten McFlurries in
-              4 or 5 of these countries. The majority of McFlurries I have consumed have been at the food court in West Quay
-              Southampton. I would buy a McFlurry after school and sit with friends to eat it. I would buy a meal at McDonalds
-              after shopping on the weekend and eat my McFlurry alongside. After I found out both my GCSE and A Level results
-              I went to the food court and bought a McFlurry. A date for my boyfriend and me would be to sit with a McFlurry
-              and fries and chat. One time we were sitting and dipping and eating and I saw an elderly man sitting alone at
-              the table behind us. I felt, for some reason, that this was an impossibly lonely sight. </p>
         </article>
       </div> <!-- end blog-post -->
     </div> <!-- end container -->
