--- a/blog.html
+++ b/blog.html
@@ -82,6 +82,7 @@
               <ul>
                 <li><a href="blog1.html"> Cinnamon Buns </a></li>
                 <li><a href="blog2.html"> Calathea </a></li>
+                <li><a> href="blog3.html"> The McFlurry: A History </a></li>
               </ul>
             </div> <!-- end links -->
           </div> <!-- end container -->
